--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -302,99 +302,12 @@
           </div>
         </div>
       </section>
-      <!-- <div class="row">
-        <h2 class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-          <span class="ind-section">What Customers Say</span>
-        </h2>
-      </div> -->
-      <!-- <section>
-        <div class="">
-          <div id="crsl-customers" class="carousel slide carousel-multi-item lkcarousel wow fadeInUp" data-ride="carousel">
-            <ol class="carousel-indicators">
-              <li data-target="#crsl-customers" data-slide-to="0" class=""></li>
-              <li data-target="#crsl-customers" data-slide-to="1" class=""></li>
-              <li data-target="#crsl-customers" data-slide-to="2" class="active"></li>
-            </ol>            
-            <div class="carousel-inner" role="listbox">
-              <div class="carousel-item">
-                <div class="card active">
-                  <div class="row active">
-                    <div class="col-sm-6 active">
-                      <div class="card-block active">
-                        <h4 class="card-title">
-                          <span lang="en" data-lang-token="home34">Pallavi Kishor Sarvey</span>
-                        </h4>
-                        <h5 class="card-designation">
-                          Dentist, Nagpur
-                        </h5>
-                        <div class="card-text">
-                          <div class="wpsso-pinterest-pin-it-image active" style="display:none !important;">
-                            <img src="https://lk-website-cdn.lendingkart.com/images/Shvet-Sanghvi.jpg" width="0" height="0" style="width:0;height:0;" alt="" data-pin-description="I was looking for a working capital for my business expansion. I was a bit frustrated with the banks as they asked for lots of documents. I appreciate the way LENDINGKART processes the loan applications as they ask for minimum documents and gives loan in few days.">
-                          </div>
-                          <p><span lang="en" data-lang-token="home36">I was looking for a working capital for my business expansion. I was a bit frustrated with the banks as they asked for lots of documents. I appreciate the way LENDINGKART processes the loan applications as they ask for minimum documents and gives loan in few days.</span></p>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-sm-6">
-                      <%= image_tag "clients/pallavi.jpeg", class: "external-img wp-post-image " %>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <div class="card active">
-                  <div class="row active">
-                    <div class="col-sm-6 active">
-                      <div class="card-block active">
-                        <h4 class="card-title">
-                          <span lang="en" data-lang-token="home37">Rajesh R. Kandalkar</span>
-                        </h4>
-                        <h5 class="card-designation">
-                          Infi Retail
-                        </h5>
-                        <div class="card-text">
-                          <div class="wpsso-pinterest-pin-it-image active" style="display:none !important;">
-                            <img src="https://lk-website-cdn.lendingkart.com/images/Kanhaiya-Rajpurohit.jpg" width="0" height="0" style="width:0;height:0;" alt="" data-pin-description="LENDINGKART’s processes are quite easy and simple to understand. Plus, the behaviour of their executives is quite professional. The loans provided by them helped in increasing my inventory. The application process was all online and therefore painless, the rates are excellent.">
-                          </div>
-                          <p><span lang="en" data-lang-token="home39">LENDINGKART’s processes are quite easy and simple to understand. Plus, the behaviour of their executives is quite professional. The loans provided by them helped in increasing my inventory. The application process was all online and therefore painless, the rates are excellent.</span></p>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-sm-6">
-                      <%= image_tag "clients/rajesh.jpg", class: "external-img wp-post-image " %>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="carousel-item active">
-                <div class="card active">
-                  <div class="row active">
-                    <div class="col-sm-6 active">
-                      <div class="card-block active">
-                        <h4 class="card-title">
-                          <span lang="en" data-lang-token="home40">Shital Thakkar</span>
-                        </h4>
-                        <h5 class="card-designation">
-                          Indian Experts Training Academy Pvt. Ltd.
-                        </h5>
-                        <div class="card-text">
-                          <div class="wpsso-pinterest-pin-it-image active" style="display:none !important;">
-                            <img src="https://lk-website-cdn.lendingkart.com/images/shithal%20thakkar.jpg" width="0" height="0" style="width:0;height:0;" alt="" data-pin-description="LENDINGKART has been very helpful! They are very professional and the best thing is the timely service. A true savior for startups I must say!">
-                          </div>
-                          <p><span lang="en" data-lang-token="home42">LENDINGKART has been very helpful! They are very professional and the best thing is the timely service. A true savior for startups I must say!</span></p>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-sm-6">
-                      <%= image_tag "clients/unknown.jpeg", class: "external-img wp-post-image " %>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section> -->
+
+
+      <section class="">
+      </section>
+
+
       <div class="row">
         <h2 class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
           <span class="ind-section">Our Partners</span>
