(Fixed) updated the api.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -304,7 +304,127 @@
       </section>
 
 
-      <section class="">
+      <div class="row">
+        <h2 class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+          <span class="ind-section">We Serve In Cities</span>
+        </h2>
+      </div>
+
+      <section class="pb-feature-section pb-feature-section-serve">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-9">
+              <div class="row row1">
+                <div class="col-md-3 col-sm-4 col-lg-2 col-xl-2 ord-10 col-md-prd">
+                  <a title="Used cars in  Ahmedabad" href="/used-cars+in+ahmedabad">
+                    <span class="iconHolder">
+                      <img alt="Ahmedabad" src="https://stimg.cardekho.com/pwa/img/IconCityNew/ahmedabad.svg" data-lazy="true" class="imageTransition active">
+                    </span>
+                    <span class="pop-city">Ahmedabad</span>
+                  </a>
+                </div>
+                <div class="col-md-3 col-sm-4 col-lg-2 col-xl-2 ord-10 col-md-prd">
+                  <a title="Used cars in  Ahmedabad" href="/used-cars+in+ahmedabad">
+                    <span class="iconHolder">
+                      <img alt="Ahmedabad" src="https://stimg.cardekho.com/pwa/img/IconCityNew/ahmedabad.svg" data-lazy="true" class="imageTransition active">
+                    </span>
+                    <span class="pop-city">Ahmedabad</span>
+                  </a>
+                </div>
+                <div class="col-md-3 col-sm-4 col-lg-2 col-xl-2 ord-10 col-md-prd">
+                  <a title="Used cars in  Ahmedabad" href="/used-cars+in+ahmedabad">
+                    <span class="iconHolder">
+                      <img alt="Ahmedabad" src="https://stimg.cardekho.com/pwa/img/IconCityNew/ahmedabad.svg" data-lazy="true" class="imageTransition active">
+                    </span>
+                    <span class="pop-city">Ahmedabad</span>
+                  </a>
+                </div>
+                <div class="col-md-3 col-sm-4 col-lg-2 col-xl-2 ord-10 col-md-prd">
+                  <a title="Used cars in  Ahmedabad" href="/used-cars+in+ahmedabad">
+                    <span class="iconHolder">
+                      <img alt="Ahmedabad" src="https://stimg.cardekho.com/pwa/img/IconCityNew/ahmedabad.svg" data-lazy="true" class="imageTransition active">
+                    </span>
+                    <span class="pop-city">Ahmedabad</span>
+                  </a>
+                </div>
+                <div class="col-md-3 col-sm-4 col-lg-2 col-xl-2 ord-10 col-md-prd">
+                  <a title="Used cars in  Ahmedabad" href="/used-cars+in+ahmedabad">
+                    <span class="iconHolder">
+                      <img alt="Ahmedabad" src="https://stimg.cardekho.com/pwa/img/IconCityNew/ahmedabad.svg" data-lazy="true" class="imageTransition active">
+                    </span>
+                    <span class="pop-city">Ahmedabad</span>
+                  </a>
+                </div>
+                <div class="col-md-3 col-sm-4 col-lg-2 col-xl-2 ord-10 col-md-prd">
+                  <a title="Used cars in  Ahmedabad" href="/used-cars+in+ahmedabad">
+                    <span class="iconHolder">
+                      <img alt="Ahmedabad" src="https://stimg.cardekho.com/pwa/img/IconCityNew/ahmedabad.svg" data-lazy="true" class="imageTransition active">
+                    </span>
+                    <span class="pop-city">Ahmedabad</span>
+                  </a>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-md-3 col-sm-4 col-lg-2 col-xl-2 ord-10 col-md-prd">
+                  <a title="Used cars in  Ahmedabad" href="/used-cars+in+ahmedabad">
+                    <span class="iconHolder">
+                      <img alt="Ahmedabad" src="https://stimg.cardekho.com/pwa/img/IconCityNew/ahmedabad.svg" data-lazy="true" class="imageTransition active">
+                    </span>
+                    <span class="pop-city">Ahmedabad</span>
+                  </a>
+                </div>
+                <div class="col-md-3 col-sm-4 col-lg-2 col-xl-2 ord-10 col-md-prd">
+                  <a title="Used cars in  Ahmedabad" href="/used-cars+in+ahmedabad">
+                    <span class="iconHolder">
+                      <img alt="Ahmedabad" src="https://stimg.cardekho.com/pwa/img/IconCityNew/ahmedabad.svg" data-lazy="true" class="imageTransition active">
+                    </span>
+                    <span class="pop-city">Ahmedabad</span>
+                  </a>
+                </div>
+                <div class="col-md-3 col-sm-4 col-lg-2 col-xl-2 ord-10 col-md-prd">
+                  <a title="Used cars in  Ahmedabad" href="/used-cars+in+ahmedabad">
+                    <span class="iconHolder">
+                      <img alt="Ahmedabad" src="https://stimg.cardekho.com/pwa/img/IconCityNew/ahmedabad.svg" data-lazy="true" class="imageTransition active">
+                    </span>
+                    <span class="pop-city">Ahmedabad</span>
+                  </a>
+                </div>
+                <div class="col-md-3 col-sm-4 col-lg-2 col-xl-2 ord-10 col-md-prd">
+                  <a title="Used cars in  Ahmedabad" href="/used-cars+in+ahmedabad">
+                    <span class="iconHolder">
+                      <img alt="Ahmedabad" src="https://stimg.cardekho.com/pwa/img/IconCityNew/ahmedabad.svg" data-lazy="true" class="imageTransition active">
+                    </span>
+                    <span class="pop-city">Ahmedabad</span>
+                  </a>
+                </div>
+                <div class="col-md-3 col-sm-4 col-lg-2 col-xl-2 ord-10 col-md-prd">
+                  <a title="Used cars in  Ahmedabad" href="/used-cars+in+ahmedabad">
+                    <span class="iconHolder">
+                      <img alt="Ahmedabad" src="https://stimg.cardekho.com/pwa/img/IconCityNew/ahmedabad.svg" data-lazy="true" class="imageTransition active">
+                    </span>
+                    <span class="pop-city">Ahmedabad</span>
+                  </a>
+                </div>
+                <div class="col-md-3 col-sm-4 col-lg-2 col-xl-2 ord-10 col-md-prd">
+                  <a title="Used cars in  Ahmedabad" href="/used-cars+in+ahmedabad">
+                    <span class="iconHolder">
+                      <img alt="Ahmedabad" src="https://stimg.cardekho.com/pwa/img/IconCityNew/ahmedabad.svg" data-lazy="true" class="imageTransition active">
+                    </span>
+                    <span class="pop-city">Ahmedabad</span>
+                  </a>
+                </div>
+              </div>              
+            </div>
+            <div class="col-md-3">
+              <div class="chk-city">
+                <h4 class="text-center">Check your city</h4>
+                <div>
+                  <%= select_tag "check_city", options_for_select(only_cities, "") %>
+                </div>                
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
 
 
