--- a/app/views/transfer_personal_loan/step3.html.erb
+++ b/app/views/transfer_personal_loan/step3.html.erb
@@ -17,7 +17,7 @@
             <td><div class="img-effect" style="margin-bottom: 0;"><%= image_tag url_for(bank.bank_image), width: 200, height: 100 %></div></td>
             <td><b><%= percentage_roi(bank.transfer_personal_loan_info.roi) %><br><span>(Reducing)</span></b></td>
             <td><b><%= number_to_currency(tr_calculate_emi(bank.transfer_personal_loan_info, @transfer_personal_loan), unit: "₹ ") %></b></td>
-            <td><b><%= number_to_currency("%.2f" % processing_fee(bank.transfer_personal_loan_info.processing_fee, @transfer_personal_loan.desired_loan_amount), unit: "₹ ") %></b></td>
+            <td><b><%= number_to_currency("%.2f" % processing_fee(bank.transfer_personal_loan_info.processing_fee, @transfer_personal_loan.desired_loan_amount, bank), unit: "₹ ") %></b></td>
             <td class="pre-pay-charg"><%= bank.transfer_personal_loan_info.preprocessing_charges.html_safe %></td>
             <td>
               <b>
