--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -1,3 +1,79 @@
+.pb-feature-section-serve {
+  margin-top: 0px !important;
+  .row1 {
+    margin-bottom: 20px;
+  }
+  .container {
+    padding: 20px;
+  }
+  a {
+    display: grid;
+    text-align: center;
+    box-shadow: 0 1px 3px rgba(36,39,44,.15);
+    background-color: #fff;
+    padding: 16px 0;
+  }
+  a:hover {
+    box-shadow: 0 4px 6px 0 rgba(36,39,44,.1);
+    border: 1px solid #ddd;
+  }
+  img {
+    width: 80px;  
+  }
+  .pop-city {
+    font-size: 15px;
+    color: #433e3e;
+    padding-top: 15px;
+  }
+  .col-md-6-prd {
+    //padding-left: 30px;
+    //padding-right: 30px;
+  }
+
+  #check_city {
+    background-color: transparent;
+    border: 0;
+    border-bottom: 1px solid #d1dce2;
+    border-radius: 0;
+    box-shadow: none;
+    display: block;
+    float: none;
+    font-size: 1.1em;
+    height: auto;
+    line-height: 18px;
+    margin: 0;
+    padding: 0 0 3px;
+    width: 100%;
+  }
+  .chk-city {
+    margin-top: 50%;
+  }
+
+  @media (max-width: 576px) {
+    .col-sm-4 {
+      -webkit-box-flex: 0 !important;
+      -ms-flex: 0 0 33.333333%;
+      flex: 0 0 33.333333% !important;
+      max-width: 33.333333% !important;
+    }
+    .pop-city {
+      font-size: 13px;
+    }
+    img {
+      width: 50px;
+    }
+    .col-md-9 {
+      padding: 0px;
+    }
+    .col-md-prd {
+      padding: 5px;    
+    }
+    .chk-city {
+      margin-top: 5%;
+    }    
+  }
+}
+
 #newsletter {
   display: flex;
   #newsletter_email {
@@ -1005,7 +1081,7 @@ homeStrip .container>p {
       padding-top: 0px;    
     }
     h4 {
-      padding: 10px;
+      padding: 0px 10px 10px 10px;
       color: #00334e;
       font-size: 24px;
       font-weight: bold;
