--- a/app/views/home_loan/step3.html.erb
+++ b/app/views/home_loan/step3.html.erb
@@ -21,7 +21,7 @@
               <td><div class="img-effect" style="margin-bottom: 0;"><%= image_tag url_for(bank.bank_image), width: 200, height: 100 %></div></td>
               <td><b><%= percentage_roi(bank.home_loan_bank_info.roi) %><br><span>(Reducing)</span></b></td>
               <td><b><%= number_to_currency(calculate_emi(bank.home_loan_bank_info, @home_loan), unit: "₹ ") %></b></td>
-              <td><b><%= number_to_currency("%.2f" % processing_fee(bank.home_loan_bank_info.processing_fee, @home_loan.loan_amount), unit: "₹ ") %></b></td>
+              <td><b><%= number_to_currency("%.2f" % processing_fee(bank.home_loan_bank_info.processing_fee, @home_loan.loan_amount, bank), unit: "₹ ") %></b></td>
               <td class="pre-pay-charg"><%= bank.home_loan_bank_info.preprocessing_charges.html_safe %></td>
               <td>
                 <b>
