--- a/app/views/personal_loan/step2.html.erb
+++ b/app/views/personal_loan/step2.html.erb
@@ -15,7 +15,7 @@
     </div>
 </section> -->
 <section class="personal-loan-section custom-container">
-  <div class="container">
+  <div class="container p-container">
     <div class="row">
       <div class="col-md-4">
         <!-- <h3>Personal Details</h3> -->
